# MADE-HPC-hw

./: .gitignore  README.md
hw2/bash_scripts/: task2.sh  task3.sh  task4.sh
hw2/matrix_matmul/: Makefile  README.md  main.cpp  matmul.cpp  matmul.h
hw3-openmp/: README.md  omp_bugparfoc.c  omp_bugreduction.c  pi.c
hw4-pagerank/: CMakeLists.txt  matrix_power.c  metro_matrix.txt  pagerank.c  readme.md  stations.txt
hw6-cuda/: conv.cu  histogram.cu  median.cu  readme.md
